2006-02-06  fabian

    * Updated website files for the new release.

2006-02-06	dnedrow

	* Set default terminal type to ANSI rather than VT100. This should
	  reduce the numerous support message re: "lack of color" support
          in the shell (eg. ls -G).

2006-02-05	dnedrow

	* Updated NIB PreferencePanels to reflect Rendezvous->Bonjour namechange.
	* Fixes for mismatched signedness warnings in PTYSession.m.
	* Corrected an XCODE 2.2 warning re: boolean assignment used for while()
	  in iTermApplicationDelegate.m.
	* Disabled prebinding in default XCode project to clear linker warnings
	  when compiling for UB targets. Can be enabled as needed for 10.2 or 
	  10.3 builds.

2006-02-05	ujwal

	* Fixed outlet bug in German NIB that caused drawer not to open.
	* Removed unnecessary code in iTermApplication.m 

2006-02-03  fabian

    * Fixed bugs in [VT100Screen InsertLines&DeleteLines] (#1180993), as suggested by
      A'rpi (arpi@mplayerhq.hu)
    * Fixed bug in Cmd-Click to start browser.
    * Fixed bug in Shift-Click to extend selection.

2006-02-02	fabian

	* Fixed background color incomplete bug (#1208764).
	
2006-02-01	fabian

	* Fixed "can't save changes" bug.
	* Fixed a bug in [VT100Screen setString] that could cause crashes in rare occasions.
	* Incorporated the patch submitted by Tom Emerson. Now the URL selection is trimmed 
	  before it's sent to the browser.
	* Updated zh_CN and zh_TW files.
	
2006-01-07	dnedrow
	* Converted project to XCode 2.2.1.
	* Set project to default to Universal Binary.
	
2005-09-21	fabian

	* Added contribution from Damon Parker into Resource page of the website.

2005-05-04	fabian

	* Changes in decoding_string(). Now we do not ignore the whole line after receiving an invalid code.
	
2005-04-16	ujwal

	* All key input is checked for mapping.
	* Preferences are saved to disk on hitting OK.

2005-04-09	ujwal

	* Removed bouncing icon feature. Not a good idea for a terminal.